# reachy_gladiator_lp

./: .gitattributes  .gitignore  LICENSE.md  README.md  index.html  pyproject.toml  style.css
reachy_gladiator_lp/: __init__.py  camera.py  gesture.py  main.py  moves.py
reachy_gladiator_lp/static/: index.html  main.js  style.css
scripts/: check_pi_camera.sh  run_pi_app.sh  setup_pi.sh  start_sim.sh
